# obligation-tracker

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.railway  LICENSE  PACKAGE_NAMING.md  PORTFOLIO_STANDARDS.md  README.md  docker-compose.yml  pyproject.toml  railway.json  railway_start.sh  start.bat  start.sh
data/sample/: generate_samples.py  obligations.json
data/sample/contracts/: consulting_meridian.docx  contractor_jordan_chen.docx  dpa_datavault.docx  lease_sterling.docx  license_prism.docx  msa_horizon.docx  saas_agreement_nimbus.docx  vendor_agreement_apex.docx
ot_app/: __init__.py  config.py  database.py  main.py
ot_app/models/: __init__.py  contract.py  obligation.py  status_history.py
ot_app/routers/: contracts.py  dashboard.py  obligations.py  system.py
ot_app/schemas/: common.py  contract.py  dashboard.py  extraction.py  obligation.py
ot_app/services/: contract_service.py  demo_service.py  extraction_service.py  obligation_service.py  scoring_service.py
ot_app/utils/: document_parser.py  file_handler.py  prompts.py  section_detector.py
ot_frontend/: __init__.py  api_client.py  app.py  components.py
ot_frontend/pages/: calendar_view.py  contracts.py  dashboard.py  obligations.py  settings.py
tests/: conftest.py  test_contracts.py  test_demo.py  test_obligations.py  test_scoring.py  test_section_detector.py
